src/css/app.scss
// ----------------------------------------------
// Fonts
// ----------------------------------------------
@font-face {
  font-family: poppins-regular;
  font-style: normal;
  font-weight: normal;
  src: url("./fonts/poppins-regular.woff");
}

// ----------------------------------------------
// Text
// ----------------------------------------------
.item-title {
  margin-top: 0;
}
.item-price {
  line-height: 30px;
  font-size: 26px;
  color: $primary;
  margin-bottom: 10px;
}
.item-value {
  line-height: 30px;
  font-size: 20px;
  color: $primary;
  margin-bottom: 10px;
}

// ----------------------------------------------
// Tags
// ----------------------------------------------
body {
  background-color: $secondary;
}

.router-link {
  text-decoration: none;
  color: inherit;
}

// ----------------------------------------------
// Classes
// ----------------------------------------------
.card {
  padding: 20px 20px;
  border-radius: $card-corner-radius;
  border-color: $secondary;
  box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.08);
}

.toolbar,
.header-container,
.body-container,
.footer-container {
  max-width: 1080px;
  margin: 0 auto;
  padding: 10px 20px;
}

